apps/webhook-router/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-router
  namespace: webhook-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-router
  template:
    metadata:
      labels:
        app: webhook-router
    spec:
      containers:
      - name: webhook-router
        image: 192.168.2.17:5000/webhook-router:0.1.0
        ports:
        - containerPort: 8080
